[package]
name = "forgiving-semver-parser"
version = "0.10.1"
authors = ["Michael Bausano <michael@porkbrain.com>", "Steve Klabnik <steve@steveklabnik.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/bausano/forgiving-semver-parser"
homepage = "https://github.com/bausano/forgiving-semver-parser"
documentation = "https://docs.rs/forgiving-semver-parser"
description = """
Parsing of the semver spec. Fork of https://github.com/steveklabnik/semver-parser.
"""
edition = "2018"

keywords = ["parser", "semver", "version", "semantic"]
categories = ["development-tools", "parsing"]

readme = "README.md"

[dependencies]
pest = "2.1.0"

[dev-dependencies]
pest_generator = "2.1"
proc-macro2 = "1.0"
